scopeserver: Add CSRF tokens to POST forms

--- a/opendiamond/scopeserver/gatekeeper/templates/scopeserver/gatekeeper_manage.html
+++ b/opendiamond/scopeserver/gatekeeper/templates/scopeserver/gatekeeper_manage.html
@@ -1,6 +1,7 @@
 {% extends "scopeserver/base.html" %}
 {% block content %}
 <form method="POST" action="">
+{% csrf_token %}
 <ul>
 {{ form.as_ul }}
 </ul>
