--- a/opendiamond/scopeserver/gigapan/templates/scopeserver/gigapan_browse.html
+++ b/opendiamond/scopeserver/gigapan/templates/scopeserver/gigapan_browse.html
@@ -23,6 +23,7 @@
 
 {% block content %}
 <form action="{% url generate %}" method="POST">
+{% csrf_token %}
 <span class="img_results">
 <div>Select some GigaPans to search:</div>
 <input class="generate" type="submit" value="Generate Cookie"/>
