--- a/opendiamond/scopeserver/core/templates/scopeserver/simple_form.html
+++ b/opendiamond/scopeserver/core/templates/scopeserver/simple_form.html
@@ -1,6 +1,7 @@
 {% extends "scopeserver/base.html" %}
 {% block content %}
 <form action="" method="POST">
+{% csrf_token %}
 <table>
 {{ form.as_table }}
 </table>
