--- a/opendiamond/scopeserver/gatekeeper/templates/scopeserver/gatekeeper.html
+++ b/opendiamond/scopeserver/gatekeeper/templates/scopeserver/gatekeeper.html
@@ -4,6 +4,7 @@
 <div id="rightbar"><a href="manage.html">Manage Permissions</a></div>
 {% endif %}
 <form method="POST" action="">
+{% csrf_token %}
 <ul>
 {{ form.as_ul }}
 </ul>
